[gd_scene load_steps=4 format=3 uid="uid://ndlp3tmhn84p"]

[ext_resource type="Script" path="res://menu/death_menu.gd" id="1_x0dbr"]
[ext_resource type="Texture2D" uid="uid://ckeiie7g1b3hu" path="res://assets/UI Elements/new game.png" id="2_mchtg"]
[ext_resource type="Texture2D" uid="uid://dk5x618eg17jw" path="res://assets/UI Elements/quit.png" id="3_7ep35"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -382.0
offset_top = -281.0
offset_right = 1585.0
offset_bottom = 1515.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.269093, 0.21882)
script = ExtResource("1_x0dbr")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 487.0
offset_top = 220.0
offset_right = 580.0
offset_bottom = 286.0
scale = Vector2(2.08, 2.24)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
icon = ExtResource("2_mchtg")
flat = true
icon_alignment = 1

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
icon = ExtResource("3_7ep35")
flat = true
icon_alignment = 1

[node name="Node" type="Node" parent="."]

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
